--- a/index.html
+++ b/index.html
@@ -97,10 +97,15 @@ main{position:relative;z-index:3;padding:60px 0 80px;}
 }
 .modal-backdrop.show{opacity:1;pointer-events:auto;} 
 .modal{
-  width:100%;max-width:980px;max-height:92vh;
-  background:#071431;border-radius:10px;
-  padding:22px 24px;color:white;
-  overflow:auto;position:relative;
+  width:100%;
+  max-width: min(980px, 100vw - 40px);
+  max-height:92vh;
+  background:#071431;
+  border-radius:10px;
+  padding:22px 24px;
+  color:white;
+  overflow:auto;
+  position:relative;
 }
 .modal-close{
   position:absolute;right:16px;top:16px;
@@ -111,6 +116,13 @@ main{position:relative;z-index:3;padding:60px 0 80px;}
 @media(max-width:800px) and (orientation:landscape){.modal .img-grid{grid-template-columns:repeat(2,1fr);} }
 @media(max-width:600px) and (orientation:portrait){.modal .img-grid{grid-template-columns:1fr;} }
 
+.modal .img-grid img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  display: block;
+}
+  
 .modal .meta-grid{
   display:grid;grid-template-columns:150px 1fr;
   gap:4px 10px;font-size:14px;margin-bottom:10px;
