--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@ main{
 
 /* Tablety na šířku */
 @media (max-width:1100px){
-  main{margin-top:-60px;}
+  main{margin-top:-140px;}
 }
 
 /* Tablety na výšku */
 @media (max-width:900px){
-  main{margin-top:-40px;}
+  main{margin-top:-140px;}
 }
 
 /* Mobily */
@@ -462,7 +462,7 @@ footer{
   <div class="modal"><div id="modal-content"></div></div>
 </div>
 
-<footer>© Vzít batoh na záda a jít ...</footer>
+<footer>Sny, výzvy a přání dělají život zajímavější...</footer>
 
 <script>
 /* URL kořen */
