--- a/index.html
+++ b/index.html
@@ -420,8 +420,10 @@ main{
 footer{
   text-align:center;
   padding:16px 0 24px;
-  font-size:13px;
-  opacity:.8;
+  font-size:14px;
+  font-weight:600;
+  font-style:italic;
+  opacity:.85;
 }
 </style>
 </head>
