--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ footer{
   <div class="modal"><div id="modal-content"></div></div>
 </div>
 
-<footer>Sny, výzvy a přání dělají život zajímavější...</footer>
+<footer>Sny, výzvy a přání dělají život zajímavější.</footer>
 
 <script>
 /* URL kořen */
